# sample_LLM_project

./: .gitignore  README.md  docker-compose.yml  llm_response_testing.ipynb  main.py  my_note.txt  notebook.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag_helper.py
.devcontainer/: devcontainer.json
elastic_data/_state/: _12.cfe  _12.cfs  _12.si  _16.cfe  _16.cfs  _16.si  _17.cfe  _17.cfs  _17.si  _17_1.liv  _19.cfe  _19.cfs  _19.si  _1a.cfe  _1a.cfs  _1a.si  _1a_1.liv  _1c.cfe  _1c.cfs  _1c.si  _1g.cfe  _1g.cfs  _1g.si  _1i.cfe  _1i.cfs  _1i.si  _1i_2.liv  _1k.cfe  _1k.cfs  _1k.si  _1w.cfe  _1w.cfs  _1w.si  _1x.cfe  _1x.cfs  _1x.si  _1x_1.liv  _1z.cfe  _1z.cfs  _1z.si  (+17 more)
elastic_data/indices/7Hx8LoAUScOPe9NAEezm4Q/_state/: state-1.st  state-2.st  state-3.st
elastic_data/indices/HZSQ1fLgTAiycuMKhV0AwQ/_state/: state-1.st  state-2.st  state-3.st
elastic_data/indices/hwoBGar8R16pgKPWvOPq_w/_state/: state-2.st  state-3.st  state-4.st
elastic_data/indices/ic1NlQO1SYqzlJ_s9S6XYw/_state/: state-2.st  state-3.st  state-4.st
elastic_data/snapshot_cache/: segments_1  segments_2  segments_3
homework/homework_1/: agentic_rag_helper_HW1.py  rag_helper_HW1.py  working_notebook_HW1.ipynb
homework/homework_2/: working_notebook_HW2.ipynb
homework_1/: homework_1.ipynb  rag_helper_homework_1.py
lessons/lesson_1/: ingest.py  llm_response_testing.ipynb  persistent_rag_ingest.ipynb  rag_helper.py  working_notebook_L1.ipynb
lessons/lesson_2/: persistent_embedded_dataset_ingest.ipynb  working_notebook_L2.ipynb
(+119 files in other folders)
